Fix main flexbox alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 .content {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
     gap: 24px;
 }
 
